ffi-bridge/src/mathlib/mathlib.h

#ifndef MATHLIB_H
#define MATHLIB_H

#ifdef __cplusplus
extern "C" {
#endif

int add(int a, int b);
int subtract(int a, int b);
int multiply(int a, int b);
double divide(double a, double b);
int factorial(int n);
int fibonacci(int n);

#ifdef __cplusplus
}
#endif

#endif // MATHLIB_H